// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedGraderFilesTab ignores attachments for URL Submissions 1`] = `
<RCTScrollView>
  <View>
    <list>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="none"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row0"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "documentLine",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool file.doc
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              />
            </View>
          </TouchableHighlight>
        </View>
      </item>
    </list>
  </View>
</RCTScrollView>
`;

exports[`SpeedGraderFilesTab renders a selected 0 index item 1`] = `
<RCTScrollView>
  <View>
    <list>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="selected"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row0"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "documentLine",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool file.doc
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "checkSolid",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 18,
                    }
                  }
                />
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </item>
    </list>
  </View>
</RCTScrollView>
`;

exports[`SpeedGraderFilesTab renders a selected non-zero index item 1`] = `
<RCTScrollView>
  <View>
    <list>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="none"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row0"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "documentLine",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool file.doc
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              />
            </View>
          </TouchableHighlight>
        </View>
      </item>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="selected"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row1"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool pic.jpg
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "checkSolid",
                    }
                  }
                  style={
                    Object {
                      "height": 18,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 18,
                    }
                  }
                />
              </View>
            </View>
          </TouchableHighlight>
        </View>
      </item>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="none"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row2"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "videoLine",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool video.mp4
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              />
            </View>
          </TouchableHighlight>
        </View>
      </item>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="none"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row3"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "audioLine",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool audio.mp3
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              />
            </View>
          </TouchableHighlight>
        </View>
      </item>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="none"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row4"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "pdfLine",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool pdf.pdf
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              />
            </View>
          </TouchableHighlight>
        </View>
      </item>
    </list>
  </View>
</RCTScrollView>
`;

exports[`SpeedGraderFilesTab renders with a submission 1`] = `
<RCTScrollView>
  <View>
    <list>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="none"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row0"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "documentLine",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool file.doc
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              />
            </View>
          </TouchableHighlight>
        </View>
      </item>
    </list>
  </View>
</RCTScrollView>
`;

exports[`SpeedGraderFilesTab renders without a submission 1`] = `
<RCTScrollView>
  <View>
    <list>
      <item>
        <View>
          <TouchableHighlight
            accessibilityTraits="none"
            accessible={true}
            onPress={[Function]}
            testID="speedgrader.files.row0"
            underlayColor="#F5F5F5"
          >
            <View
              style={
                Object {
                  "borderBottomColor": "#C7CDD1",
                  "borderBottomWidth": 0.5,
                  "flex": 1,
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 16,
                }
              }
            >
              <View
                style={
                  Object {
                    "marginRight": 16,
                  }
                }
              >
                <Image
                  source={
                    Object {
                      "uri": "documentLine",
                    }
                  }
                  style={
                    Object {
                      "height": 24,
                      "resizeMode": "contain",
                      "tintColor": "#008EE2",
                      "width": 24,
                    }
                  }
                />
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "flex": -1,
                    "flexGrow": 1,
                  }
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "color": "#2D3B45",
                        "fontSize": 16,
                      },
                      Object {
                        "fontWeight": "500",
                        "overflow": "hidden",
                        "textAlign": "left",
                      },
                    ]
                  }
                >
                  cool file.doc
                </Text>
              </View>
              <View
                style={
                  Object {
                    "alignSelf": "center",
                  }
                }
              />
            </View>
          </TouchableHighlight>
        </View>
      </item>
    </list>
  </View>
</RCTScrollView>
`;
